--- a/testing.html
+++ b/testing.html
@@ -1,236 +1,130 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Catch the Good Items</title>
+  <title>Rui vs Veggies</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <style>
-    canvas { background: #eefaa8; display: block; margin: 0 auto; }
-    body { margin: 0; font-family: sans-serif; }
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      background: #eefaa8;
+      font-family: sans-serif;
+      overflow: hidden;
+      touch-action: manipulation;
+    }
+
+    #game-container {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+
+    canvas {
+      image-rendering: pixelated;
+      width: 100%;
+      max-width: 400px;
+      aspect-ratio: 2 / 3;
+    }
+
+    .mobile-controls {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      display: flex;
+      justify-content: space-between;
+      padding: 20px;
+      z-index: 100;
+    }
+
+    .mobile-button {
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+      background-color: rgba(255, 255, 255, 0.8);
+      border: 2px solid #000;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 24px;
+      user-select: none;
+      -webkit-tap-highlight-color: transparent;
+    }
+
+    .mobile-button:active {
+      background-color: rgba(200, 200, 200, 0.8);
+    }
+
+    .mobile-menu {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: rgba(0, 0, 0, 0.7);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      z-index: 200;
+      color: white;
+      text-align: center;
+    }
+
+    .mobile-menu-button {
+      margin: 10px;
+      padding: 15px 30px;
+      background-color: rgba(255, 255, 255, 0.8);
+      color: black;
+      border-radius: 10px;
+      font-size: 18px;
+      cursor: pointer;
+      user-select: none;
+    }
+
+    .mobile-menu-button:active {
+      background-color: rgba(200, 200, 200, 0.8);
+    }
+
+    .hidden {
+      display: none !important;
+    }
+
+    @media (min-width: 768px) {
+      .mobile-controls, .mobile-menu {
+        display: none !important;
+      }
+    }
   </style>
 </head>
 <body>
-<canvas id="game" width="400" height="600"></canvas>
-<script>
-const canvas = document.getElementById('game');
-const ctx = canvas.getContext('2d');
-ctx.imageSmoothingEnabled = false;
+  <div id="game-container">
+    <canvas id="game" width="400" height="600"></canvas>
 
-const bgImg = new Image();
-bgImg.src = 'image/background_pixel.png';
+    <div class="mobile-controls">
+      <div id="leftButton" class="mobile-button">←</div>
+      <div id="pauseButton" class="mobile-button">||</div>
+      <div id="rightButton" class="mobile-button">→</div>
+    </div>
 
-const playerImages = {
-  normal: new Image(),
-  happy: new Image(),
-  dead: new Image()
-};
-playerImages.normal.src = 'image/rui_normal.png';
-playerImages.happy.src = 'image/rui_closing_eyes.png';
-playerImages.dead.src   = 'image/rui_dead.png';
+    <div id="pauseMenu" class="mobile-menu hidden">
+      <h1>Paused</h1>
+      <div id="continueButton" class="mobile-menu-button">Continue</div>
+      <div id="restartButtonMenu" class="mobile-menu-button">Restart</div>
+    </div>
 
-// Image loading promises
-function loadImage(img) {
-  return new Promise((resolve, reject) => {
-    img.onload = resolve;
-    img.onerror = () => reject(`Failed to load image: ${img.src}`);
-  });
-}
-const imagePromises = [
-  loadImage(bgImg),
-  loadImage(playerImages.normal),
-  loadImage(playerImages.happy),
-  loadImage(playerImages.dead)
-];
-
-const player = {
-  x: 160, y: 500, width: 96, height: 96, speed: 300,
-  state: 'normal',
-  stateTimer: 0,
-  jumpOffset: 0,
-  jumping: false,
-  jumpSpeed: 0
-};
-
-let items = [];
-let score = 0;
-let highScore = 0;
-let gameOver = false;
-let paused = false;
-
-let moveLeft = false, moveRight = false;
-let lastTime = 0;
-let itemTimer = 0;
-
-function spawnItem() {
-  const isBomb = Math.random() < 0.3;
-  items.push({
-    x: Math.random() * (canvas.width - 20),
-    y: 0,
-    size: 20,
-    isBomb,
-    speed: 100 + Math.random() * 100
-  });
-}
-
-function update(delta) {
-  if (gameOver || paused) return;
-
-  itemTimer += delta;
-  if (itemTimer > 1) {
-    spawnItem();
-    itemTimer = 0;
-  }
-
-  for (let i = items.length - 1; i >= 0; i--) {
-    const item = items[i];
-    item.y += item.speed * delta;
-
-    if (
-      item.x < player.x + player.width &&
-      item.x + item.size > player.x &&
-      item.y < player.y + player.height &&
-      item.y + item.size > player.y
-    ) {
-      if (item.isBomb) {
-        player.state = 'dead';
-        gameOver = true;
-        if (score > highScore) highScore = score;
-        return;
-      } else {
-        player.state = 'happy';
-        player.stateTimer = 0.3;
-        player.jumping = true;
-        player.jumpSpeed = -300;
-        score++;
-        items.splice(i, 1);
-      }
-    }
-  }
-
-  if (player.jumping) {
-    player.jumpSpeed += 2000 * delta;
-    player.jumpOffset += player.jumpSpeed * delta;
-    if (player.jumpOffset >= 0) {
-      player.jumpOffset = 0;
-      player.jumping = false;
-    }
-  }
-
-  if (player.state === 'happy') {
-    player.stateTimer -= delta;
-    if (player.stateTimer <= 0) {
-      player.state = 'normal';
-    }
-  }
-
-  items = items.filter(item => item.y <= canvas.height);
-}
-
-function draw() {
-  ctx.clearRect(0, 0, canvas.width, canvas.height);
-  ctx.drawImage(bgImg, 0, 0, canvas.width, canvas.height);
-
-  const img = playerImages[player.state] || playerImages.normal;
-  ctx.drawImage(img, player.x, player.y + player.jumpOffset, player.width, player.height);
-
-  for (const item of items) {
-    ctx.fillStyle = item.isBomb ? 'red' : 'green';
-    ctx.beginPath();
-    ctx.arc(item.x + item.size / 2, item.y + item.size / 2, item.size / 2, 0, Math.PI * 2);
-    ctx.fill();
-  }
-
-  ctx.fillStyle = 'black';
-  ctx.font = '16px Arial';
-  ctx.fillText(`Score: ${score}`, 10, 20);
-  ctx.fillText(`High Score: ${highScore}`, 10, 40);
-
-  if (paused) {
-    ctx.fillStyle = 'rgba(0, 0, 0, 0.6)';
-    ctx.fillRect(0, 0, canvas.width, canvas.height);
-    ctx.fillStyle = 'white';
-    ctx.font = '24px Arial';
-    ctx.textAlign = 'center';
-    ctx.fillText('Paused', canvas.width / 2, canvas.height / 2 - 40);
-    ctx.font = '18px Arial';
-    ctx.fillText('Continue (Enter)', canvas.width / 2, canvas.height / 2);
-    ctx.fillText('Restart (R)', canvas.width / 2, canvas.height / 2 + 30);
-  }
-
-  if (gameOver) {
-    ctx.fillStyle = 'rgba(255, 0, 0, 0.6)';
-    ctx.fillRect(0, 0, canvas.width, canvas.height);
-    ctx.fillStyle = 'white';
-    ctx.font = '24px Arial';
-    ctx.textAlign = 'center';
-    ctx.fillText('Game Over', canvas.width / 2, canvas.height / 2 - 20);
-    ctx.font = '18px Arial';
-    ctx.fillText(`Score: ${score}`, canvas.width / 2, canvas.height / 2 + 10);
-    ctx.fillText(`High Score: ${highScore}`, canvas.width / 2, canvas.height / 2 + 40);
-    ctx.font = '12px Arial';
-    ctx.fillText('Made by shin', canvas.width / 2, canvas.height / 2 + 60);
-    ctx.font = '18px Arial';
-    ctx.fillText('Press Enter to Restart', canvas.width / 2, canvas.height / 2 + 80);
-  }
-
-  ctx.textAlign = 'start';
-}
-
-function handleMovement(delta) {
-  if (paused || gameOver) return;
-  if (moveLeft) player.x -= player.speed * delta;
-  if (moveRight) player.x += player.speed * delta;
-  player.x = Math.max(0, Math.min(canvas.width - player.width, player.x));
-}
-
-function resetGame() {
-  score = 0;
-  items = [];
-  gameOver = false;
-  paused = false;
-  player.x = 160;
-  player.state = 'normal';
-  player.jumpOffset = 0;
-  player.jumping = false;
-  player.jumpSpeed = 0;
-  itemTimer = 0;
-}
-
-function loop(timestamp) {
-  const delta = (timestamp - lastTime) / 1000;
-  lastTime = timestamp;
-
-  handleMovement(delta);
-  update(delta);
-  draw();
-
-  requestAnimationFrame(loop);
-}
-
-// Input handling
-document.addEventListener('keydown', e => {
-  if (e.key === 'ArrowLeft') moveLeft = true;
-  if (e.key === 'ArrowRight') moveRight = true;
-  if (e.key === 'Enter') {
-    if (gameOver) resetGame();
-    else paused = !paused;
-  }
-  if (e.key.toLowerCase() === 'r') resetGame();
-});
-document.addEventListener('keyup', e => {
-  if (e.key === 'ArrowLeft') moveLeft = false;
-  if (e.key === 'ArrowRight') moveRight = false;
-});
-
-// Start game after images load
-Promise.all(imagePromises)
-  .then(() => {
-    console.log("All images loaded. Starting game...");
-    requestAnimationFrame(loop);
-  })
-  .catch(err => {
-    console.error("Image load error:", err);
-    alert("Failed to load images. Check the image paths.");
-  });
-
-</script>
+    <div id="gameOverMenu" class="mobile-menu hidden">
+      <h1>Game Over</h1>
+      <div id="scoreDisplay">Score: 0</div>
+      <div id="highScoreDisplay">High Score: 0</div>
+      <div id="restartButtonGameOver" class="mobile-menu-button">Play Again</div>
+    </div>
+  </div>
+  <script src="game.js"></script>
 </body>
 </html>
